# icon-isc24

./: .clang-format  .gitignore  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  main.cpp
LICENSES/: BSD-3-Clause.txt
LICENSES/Third_party_license_terms/: BSD-3-Clause.fesom_seaice.txt  BSD-3-Clause.hailcast.txt  BSD-3-Clause.rte-rrtmgp.txt
core/: CMakeLists.txt
core/common/: constants.hpp  graupel.hpp  types.hpp  utils.cpp  utils.hpp
core/properties/: deposition_auto_conversion.hpp  deposition_factor.hpp  fall_speed.hpp  ice_deposition.hpp  ice_mass.hpp  ice_number.hpp  ice_sticking.hpp  snow_lambda.hpp  snow_number.hpp  thermo.hpp  vel_scale_factor.hpp
core/transitions/: cloud_to_graupel.hpp  cloud_to_rain.hpp  cloud_to_snow.hpp  cloud_x_ice.hpp  graupel_to_rain.hpp  ice_to_graupel.hpp  ice_to_snow.hpp  rain_to_graupel.hpp  rain_to_vapor.hpp  snow_to_graupel.hpp  snow_to_rain.hpp  vapor_x_graupel.hpp  vapor_x_ice.hpp  vapor_x_snow.hpp
html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _muphys_test_8cc.html  _muphys_test_8cc_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_muphys_test-members.html  class_muphys_test.html  classes.html  cloud__to__graupel_8hpp.html  cloud__to__graupel_8hpp_source.html  cloud__to__rain_8hpp.html  cloud__to__rain_8hpp_source.html  cloud__to__snow_8hpp.html  cloud__to__snow_8hpp_source.html  cloud__x__ice_8hpp.html  cloud__x__ice_8hpp_source.html  common_8cc.html  common_8cc_source.html  constants_8hpp.html  constants_8hpp_source.html  deposition__auto__conversion_8hpp.html  deposition__auto__conversion_8hpp_source.html  deposition__factor_8hpp.html  deposition__factor_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_3c4f2852a8d216f610045b3a2e8b9267.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_66c45555d166b63def6897b36ca7e5f8.html  dir_96905e4e8221386a66b3608ee8aaef34.html  dir_bc161955dc3a3d2485839eba21420d01.html  dir_d12a494b5868c3171ad5a86c7563cf73.html  dir_d842c7a4bf0d267d2fa3b9982ead184a.html  doxygen_crawl.html  fall__speed_8hpp.html  fall__speed_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+99 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  (+37 more)
implementations/: CMakeLists.txt
implementations/openacc/: graupel.cpp
implementations/sequential/: CMakeLists.txt  graupel.cpp
io/: CMakeLists.txt  io.cpp  io.hpp
man/man3/: CONTRIBUTING.md.3  MuphysTest.3  MuphysTest.cc.3  README.md.3  _Users_bryan_Downloads_icon-isc24_core_.3  _Users_bryan_Downloads_icon-isc24_core_common_.3  _Users_bryan_Downloads_icon-isc24_core_properties_.3  _Users_bryan_Downloads_icon-isc24_core_transitions_.3  _Users_bryan_Downloads_icon-isc24_implementations_.3  _Users_bryan_Downloads_icon-isc24_implementations_openacc_.3  _Users_bryan_Downloads_icon-isc24_io_.3  _Users_bryan_Downloads_icon-isc24_test_.3  cloud_to_graupel.hpp.3  cloud_to_rain.hpp.3  cloud_to_snow.hpp.3  cloud_x_ice.hpp.3  common.cc.3  constants.hpp.3  deposition_auto_conversion.hpp.3  deposition_factor.hpp.3  fall_speed.hpp.3  graupel.cpp.3  graupel.hpp.3  graupel_ct.3  graupel_to_rain.hpp.3  ice_deposition.hpp.3  ice_mass.hpp.3  ice_number.hpp.3  ice_sticking.hpp.3  ice_to_graupel.hpp.3  ice_to_snow.hpp.3  idx.3  io.cc.3  io.cpp.3  io.hpp.3  io_muphys.3  main.cpp.3  md__c_o_n_t_r_i_b_u_t_i_n_g.3  md__r_e_a_d_m_e.3  property.3  (+19 more)
reference_results/: dbg_double.nc  dbg_single.nc  sequential_double_output.nc  sequential_single_output.nc
rtf/: dir_13e138d54eb8818da29c3992edef070a.rtf  dir_3c4f2852a8d216f610045b3a2e8b9267.rtf  dir_4270bfced15e0e73154b13468c7c9ad9.rtf  dir_66c45555d166b63def6897b36ca7e5f8.rtf  dir_96905e4e8221386a66b3608ee8aaef34.rtf  dir_bc161955dc3a3d2485839eba21420d01.rtf  dir_d12a494b5868c3171ad5a86c7563cf73.rtf  dir_d842c7a4bf0d267d2fa3b9982ead184a.rtf  refman.rtf  ~$refman.rtf
scripts/: build-gcc-acc.sh  build-gcc-seq.sh  build-nvhpc-acc.sh  build-nvhpc-dbg.sh  build-nvhpc-seq.sh  build-run-double.sbatch  build-run-single.sbatch  build.sh  exec-gcc-gpu.sbatch  exec-gpu.sbatch  exec-nvhpc-gpu.sbatch  full-run-nvhpc.sbatch  levante-cpu.sbatch  levante-gpu.sbatch  levante-setup.sh
tasks/: dbg.nc  input.nc
test/: CMakeLists.txt  MuphysTest.cc  common.cc  io.cc
